로깅, 요청 매핑, 헤더 조회
Log 사용 방법, 요청 매핑 방법의 종류, 헤더 조회 방법에 대한 학습

--- a/springmvc/src/main/resources/application.properties
+++ b/springmvc/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#Set the full log level(Default info)
+logging.level.root=info
 
+#Set hello.springmvc package and lower level]
+logging.level.hello.springmvc=debug
