--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-# port ??
+# port \uC815\uBCF4
 server.port=8081
 
-# mysql ?? ??
+# mysql \uC5F0\uB3D9 \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_toy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=user_seungwon
-spring.datasource.password=1234
+spring.datasource.url=${MySQL_URL}
+spring.datasource.username=${MySQL_Username}
+spring.datasource.password=${MySQL_Password}
 spring.thymeleaf.cache=false
 
-# spring data jpa ??
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# spring data jpa \uC124\uC815
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
