--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.thymeleaf.cache=false
 # spring data jpa \uC124\uC815
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
